[package]
name = "ripgvc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.19.2", features = ["full"] }
axum = "0.5.6"
mongodb = "2.2.2"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11.10", features = ["rustls-tls-native-roots"] }